fix: moved overflow hidden to content

--- a/frontend/styles/reserve-rooms.css
+++ b/frontend/styles/reserve-rooms.css
@@ -1,9 +1,5 @@
 @import "tailwindcss";
 
-body{
-    @apply overflow-hidden;
-
-} 
 .reservation-room .reserve-bldg-text, 
                     .go-back-text, 
                     .reserve-bldg-text, 
@@ -39,6 +35,8 @@ body{
 
 #content {
     @apply mt-10 flex flex-col items-center w-full;
+    @apply overflow-hidden;
+
 }
 
 #content-area{
@@ -47,7 +45,7 @@ body{
 }
 
 #date-time-selection{
-    @apply flex flex-col gap-4 w-full;
+    @apply flex flex-col w-full;
 }
 
 #reserved-time{
@@ -55,10 +53,10 @@ body{
     @apply border-b border-solid border-white;
 }
 
-#reserved-date, #reserved-date:focus, #reserved-time{
-    @apply border-none;
+#reserved-date, #reserved-time{
+    @apply border-none outline-none appearance-none bg-transparent;
     @apply border-b border-solid border-white;
-    @apply placeholder:text-white;
+    @apply placeholder:text-white text-white;
 }
 
 #available-rooms-container{
